v_utils_macros/tests/compile_fail/primitives_unknown_field_value.stderr
error: unknown `#[primitives(skp)]` on field; the only supported value is `skip`
 --> $DIR/v_utils_macros/tests/compile_fail/primitives_unknown_field_value.rs:7:15
  |
7 |     #[primitives(skp)]
  |                  ^^^

error: aborting due to 1 previous error

